
syntax = "proto3";

package service;

service Service {
  rpc get(GetRequest) returns (GetResponse);
  rpc set(SetRequest) returns (Empty);
}

message GetRequest {
  int64 id = 1;
}

message GetResponse {
  string value = 1;
}

message SetRequest {
  int64 id = 1;
  string value = 2;
}

message Empty {}
